--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,6 +1,8 @@
 {
+    "TYPES.JournalEntryPage.foundry-getting-lost.lostMap": "Lost Map",
     "foundry-getting-lost.sheet.title": "Lost Map Configuration",
-    "foundry-getting-lost.list.title": "Lost Maps",
-    "foundry-getting-lost.tab.general": "General",
-    "foundry-getting-lost.tab.weights": "Roll Weights"
+    "foundry-getting-lost.sheet.flavorText": "Flavor Text",
+    "foundry-getting-lost.sheet.mapImage": "Map Image",
+    "foundry-getting-lost.sheet.divisions": "Divisions",
+    "foundry-getting-lost.sheet.divisions.hint": "Number of rolls/sub-divisions to determine party position"
 }
