--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,8 +1,10 @@
 {
     "TYPES.JournalEntryPage.foundry-getting-lost.lostMap": "Lost Map",
+    "foundry-getting-lost.run": "Run Lost Map",
     "foundry-getting-lost.sheet.title": "Lost Map Configuration",
     "foundry-getting-lost.sheet.flavorText": "Flavor Text",
     "foundry-getting-lost.sheet.mapImage": "Map Image",
+    "foundry-getting-lost.sheet.notSet": "Not Set",
     "foundry-getting-lost.sheet.divisions": "Divisions",
     "foundry-getting-lost.sheet.divisionsHint": "Number of rolls/sub-divisions to determine party position",
     "foundry-getting-lost.sheet.divisionOption1": "1 division",
@@ -10,5 +12,6 @@
     "foundry-getting-lost.sheet.divisionOption3": "3 division",
     "foundry-getting-lost.sheet.divisionOption4": "4 division",
     "foundry-getting-lost.sheet.divisionOption5": "5 division",
-    "foundry-getting-lost.sheet.divisionOption6": "6 division"
+    "foundry-getting-lost.sheet.divisionOption6": "6 division",
+    "foundry-getting-lost.result.rolls": "Roll Results"
 }
